@@ -9,6 +9,7 @@ import com.linkedin.common.urn.DataPlatformUrn;
 import com.linkedin.common.urn.DatasetUrn;
 import com.linkedin.common.urn.TagUrn;
 import com.linkedin.common.urn.Urn;
+import com.linkedin.data.template.SetMode;
 import com.linkedin.metadata.config.search.GraphQueryConfiguration;
 import com.linkedin.metadata.graph.Edge;
 import com.linkedin.metadata.graph.EntityLineageResult;
@@ -20,8 +21,12 @@ import com.linkedin.metadata.graph.RelatedEntity;
 import com.linkedin.metadata.graph.elastic.ESGraphQueryDAO;
 import com.linkedin.metadata.graph.elastic.ESGraphWriteDAO;
 import com.linkedin.metadata.graph.elastic.ElasticSearchGraphService;
+import com.linkedin.metadata.models.registry.ConfigEntityRegistry;
+import com.linkedin.metadata.models.registry.EntityRegistryException;
 import com.linkedin.metadata.models.registry.LineageRegistry;
+import com.linkedin.metadata.models.registry.MergedEntityRegistry;
 import com.linkedin.metadata.models.registry.SnapshotEntityRegistry;
+import com.linkedin.metadata.query.LineageFlags;
 import com.linkedin.metadata.query.filter.Filter;
 import com.linkedin.metadata.query.filter.RelationshipDirection;
 import com.linkedin.metadata.query.filter.RelationshipFilter;
@@ -30,12 +35,14 @@ import com.linkedin.metadata.search.elasticsearch.update.ESBulkProcessor;
 import com.linkedin.metadata.utils.elasticsearch.IndexConvention;
 import com.linkedin.metadata.utils.elasticsearch.IndexConventionImpl;
 import io.datahubproject.test.search.SearchTestUtils;
+import io.datahubproject.test.search.config.SearchCommonTestConfiguration;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import org.junit.Assert;
 import org.opensearch.client.RestHighLevelClient;
 import org.testng.SkipException;
@@ -54,15 +61,17 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
   @Nonnull
   protected abstract ESIndexBuilder getIndexBuilder();
 
-  private final IndexConvention _indexConvention = new IndexConventionImpl(null);
+  private final IndexConvention _indexConvention = IndexConventionImpl.NO_PREFIX;
   private final String _indexName = _indexConvention.getIndexName(INDEX_NAME);
   private ElasticSearchGraphService _client;
+  private boolean _enableMultiPathSearch =
+      GraphQueryConfiguration.testDefaults.isEnableMultiPathSearch();
 
   private static final String TAG_RELATIONSHIP = "SchemaFieldTaggedWith";
 
   @BeforeClass
   public void setup() {
-    _client = buildService();
+    _client = buildService(_enableMultiPathSearch);
     _client.configure();
   }
 
@@ -73,8 +82,23 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
   }
 
   @Nonnull
-  private ElasticSearchGraphService buildService() {
-    LineageRegistry lineageRegistry = new LineageRegistry(SnapshotEntityRegistry.getInstance());
+  private ElasticSearchGraphService buildService(boolean enableMultiPathSearch) {
+    ConfigEntityRegistry configEntityRegistry =
+        new ConfigEntityRegistry(
+            SearchCommonTestConfiguration.class
+                .getClassLoader()
+                .getResourceAsStream("entity-registry.yml"));
+    SnapshotEntityRegistry snapshotEntityRegistry = SnapshotEntityRegistry.getInstance();
+    LineageRegistry lineageRegistry;
+    try {
+      MergedEntityRegistry mergedEntityRegistry =
+          new MergedEntityRegistry(snapshotEntityRegistry).apply(configEntityRegistry);
+      lineageRegistry = new LineageRegistry(mergedEntityRegistry);
+    } catch (EntityRegistryException e) {
+      throw new RuntimeException(e);
+    }
+    GraphQueryConfiguration configuration = GraphQueryConfiguration.testDefaults;
+    configuration.setEnableMultiPathSearch(enableMultiPathSearch);
     ESGraphQueryDAO readDAO =
         new ESGraphQueryDAO(
             getSearchClient(),
@@ -93,8 +117,19 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
 
   @Override
   @Nonnull
-  protected GraphService getGraphService() {
+  protected GraphService getGraphService(boolean enableMultiPathSearch) {
+    if (enableMultiPathSearch != _enableMultiPathSearch) {
+      _enableMultiPathSearch = enableMultiPathSearch;
+      _client = buildService(enableMultiPathSearch);
+      _client.configure();
+    }
     return _client;
+  }
+
+  @Override
+  @Nonnull
+  protected GraphService getGraphService() {
+    return getGraphService(GraphQueryConfiguration.testDefaults.isEnableMultiPathSearch());
   }
 
   @Override
@@ -301,79 +336,51 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
         Arrays.asList(
             // One upstream edge
             new Edge(
-                datasetTwoUrn,
-                datasetOneUrn,
-                downstreamOf,
-                initialTime,
-                null,
-                initialTime,
-                null,
-                null),
+                dataset2Urn, dataset1Urn, downstreamOf, initialTime, null, initialTime, null, null),
             // Two downstream
             new Edge(
-                datasetThreeUrn,
-                datasetTwoUrn,
-                downstreamOf,
-                initialTime,
-                null,
-                initialTime,
-                null,
-                null),
+                dataset3Urn, dataset2Urn, downstreamOf, initialTime, null, initialTime, null, null),
             new Edge(
-                datasetFourUrn,
-                datasetTwoUrn,
-                downstreamOf,
-                initialTime,
-                null,
-                initialTime,
-                null,
-                null),
+                dataset4Urn, dataset2Urn, downstreamOf, initialTime, null, initialTime, null, null),
             // One with null values, should always be returned
-            new Edge(datasetFiveUrn, datasetTwoUrn, downstreamOf, null, null, null, null, null));
+            new Edge(dataset5Urn, dataset2Urn, downstreamOf, null, null, null, null, null));
 
     edges.forEach(getGraphService()::addEdge);
     syncAfterWrite();
 
     // Without timestamps
-    EntityLineageResult upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
-    EntityLineageResult downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    EntityLineageResult upstreamResult = getUpstreamLineage(dataset2Urn, null, null);
+    EntityLineageResult downstreamResult = getDownstreamLineage(dataset2Urn, null, null);
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Timestamp before
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, 0L, initialTime - 10);
+    downstreamResult = getDownstreamLineage(dataset2Urn, 0L, initialTime - 10);
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp after
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, initialTime + 10, initialTime + 100);
+    downstreamResult = getDownstreamLineage(dataset2Urn, initialTime + 10, initialTime + 100);
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp included
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, initialTime - 10, initialTime + 10);
+    downstreamResult = getDownstreamLineage(dataset2Urn, initialTime - 10, initialTime + 10);
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Update only one of the downstream edges
     Long updatedTime = 2000L;
     edges =
         Arrays.asList(
             new Edge(
-                datasetTwoUrn,
-                datasetOneUrn,
-                downstreamOf,
-                initialTime,
-                null,
-                updatedTime,
-                null,
-                null),
+                dataset2Urn, dataset1Urn, downstreamOf, initialTime, null, updatedTime, null, null),
             new Edge(
-                datasetThreeUrn,
-                datasetTwoUrn,
+                dataset3Urn,
+                dataset2Urn,
                 downstreamOf,
                 initialTime,
                 null,
@@ -385,22 +392,45 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
     syncAfterWrite();
 
     // Without timestamps
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, null, null);
+    downstreamResult = getDownstreamLineage(dataset2Urn, null, null);
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes initial time and updated time
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, initialTime - 10, updatedTime + 10);
+    downstreamResult = getDownstreamLineage(dataset2Urn, initialTime - 10, updatedTime + 10);
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes updated time but not initial time
-    upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
-    downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(2), downstreamResult.getTotal());
+    upstreamResult = getUpstreamLineage(dataset2Urn, initialTime + 10, updatedTime + 10);
+    downstreamResult = getDownstreamLineage(dataset2Urn, initialTime + 10, updatedTime + 10);
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(2), downstreamResult.getTotal());
+  }
+
+  @Test
+  public void testExplored() throws Exception {
+
+    List<Edge> edges =
+        Arrays.asList(
+            // One upstream edge
+            new Edge(dataset2Urn, dataset1Urn, downstreamOf, null, null, null, null, null),
+            // Two downstream
+            new Edge(dataset3Urn, dataset2Urn, downstreamOf, null, null, null, null, null),
+            new Edge(dataset4Urn, dataset2Urn, downstreamOf, null, null, null, null, null),
+            // One with null values, should always be returned
+            new Edge(dataset5Urn, dataset2Urn, downstreamOf, null, null, null, null, null));
+
+    edges.forEach(getGraphService()::addEdge);
+    syncAfterWrite();
+
+    EntityLineageResult result = getUpstreamLineage(dataset2Urn, null, null, 10);
+    Assert.assertTrue(Boolean.TRUE.equals(result.getRelationships().get(0).isExplored()));
+
+    EntityLineageResult result2 = getUpstreamLineage(dataset2Urn, null, null, 10, 0);
+    Assert.assertTrue(result2.getRelationships().get(0).isExplored() == null);
   }
 
   /**
@@ -412,7 +442,16 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
    * @return The Upstream lineage for urn from the window from startTime to endTime
    */
   private EntityLineageResult getUpstreamLineage(Urn urn, Long startTime, Long endTime) {
-    return getLineage(urn, LineageDirection.UPSTREAM, startTime, endTime);
+    return getLineage(urn, LineageDirection.UPSTREAM, startTime, endTime, 0, null);
+  }
+
+  private EntityLineageResult getUpstreamLineage(Urn urn, Long startTime, Long endTime, int count) {
+    return getLineage(urn, LineageDirection.UPSTREAM, startTime, endTime, count, null);
+  }
+
+  private EntityLineageResult getUpstreamLineage(
+      Urn urn, Long startTime, Long endTime, int count, int exploreLimit) {
+    return getLineage(urn, LineageDirection.UPSTREAM, startTime, endTime, count, exploreLimit);
   }
 
   /**
@@ -424,7 +463,7 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
    * @return The Downstream lineage for urn from the window from startTime to endTime
    */
   private EntityLineageResult getDownstreamLineage(Urn urn, Long startTime, Long endTime) {
-    return getLineage(urn, LineageDirection.DOWNSTREAM, startTime, endTime);
+    return getLineage(urn, LineageDirection.DOWNSTREAM, startTime, endTime, 0, null);
   }
 
   /**
@@ -437,7 +476,23 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
    * @return The lineage for urn from the window from startTime to endTime in direction
    */
   private EntityLineageResult getLineage(
-      Urn urn, LineageDirection direction, Long startTime, Long endTime) {
-    return getGraphService().getLineage(urn, direction, 0, 0, 3, startTime, endTime);
+      Urn urn,
+      LineageDirection direction,
+      Long startTime,
+      Long endTime,
+      int count,
+      @Nullable Integer entitiesExploredPerHopLimit) {
+    return getGraphService()
+        .getLineage(
+            urn,
+            direction,
+            0,
+            count,
+            3,
+            new LineageFlags()
+                .setStartTimeMillis(startTime, SetMode.REMOVE_IF_NULL)
+                .setEndTimeMillis(endTime, SetMode.REMOVE_IF_NULL)
+                .setEntitiesExploredPerHopLimit(
+                    entitiesExploredPerHopLimit, SetMode.REMOVE_IF_NULL));
   }
 }
